style/style.css
body {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    background-color: #222222;
}

.app {
    display: flex;
    flex-direction: column;
    height: 100%;
    font-family: monospace;
}

.button {
    flex-grow: 0;
    flex-shrink: 0;
    width: 20px;
    height: 20px;
    padding: 10px 0 2px 0;
    text-align: center;
    color: #FFFFFF;
    cursor: pointer;
}

.button:hover {
    color: #FFAA66;
}

.button:active {
    color: #FF8844;
}

.controls {
    display: flex;
    align-items: center;
    padding: 0 5px;
}

.right-controls {
    flex-grow: 1;
    flex-direction: row-reverse;
}

.tabs {
    flex-grow: 0;
    flex-shrink: 0;
    display: flex;
    align-items: flex-end;
}

.tab {
    height: 20px;
    padding: 10px 8px 2px 8px;
    color: #FFFFFF;
    cursor: pointer;
}

.tab:hover {
    color: #FFAA66;
}

.selected-tab {
    color: #FF8844;
}

.svg-editor {
    display: flex;
    flex-wrap: wrap-reverse;
    align-items: stretch;
    align-content: stretch;
    width: 100%;
    height: 100%;
}

.svg-editor textarea {
    flex-grow: 1;
    padding: 5px;
    margin: 5px;
    background-color: #111111;
    color: #FFFFFF;
    border: none;
    resize: none;
}

.svg-editor svg {
    flex-grow: 2;
    padding: 5px;
    margin: 5px;
    background-color: #333333;
}

